# finalprojecthacksthank

./: .env.example  .gitignore  README.md  alembic.ini  conftest.py  jest.config.js  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  worker.py
__tests__/: twilioQueue.test.js
alembic/: env.py  script.py.mako
alembic/versions/: 20231128_0001_core_tables.py
app/: __init__.py  alerts.py  compliance.py  config.py  db.py  generator.py  main.py  models.py  monitoring.py  queue.py  retention.py  safety.py
config/: settings.example.toml  settings.toml
data/: tasks.json
docs/: router-architecture.md
intent_router/: __init__.py  config.py  exceptions.py  fallbacks.py  language_detection.py  qwen.py  schema.py  service.py  telemetry.py  types.py
queue/: tasks.example.json
scripts/: deploy_services.py  setup_env.sh
src/: config.js  index.js  ruleEngine.js
src/channels/: baseAdapter.js  exotelAdapter.js  localQueue.js  twilioAdapter.js
src/cli/: pushDrafts.js
src/compliance/: dpdpService.js
src/core/: task-publisher.js  task-store.js
src/data/: historyStore.js
src/github/: github-issue-client.js
src/lib/: encryption.js  fs-utils.js  (+2 more)
systemd/: safety-api.service  safety-worker.service
tests/: cashflow.test.js  channelAdapters.test.js  conftest.py  dpdp.test.js  fileTaskStore.test.js  goalsModule.test.js  guardrails.test.js  router.test.js  ruleEngine.test.js  taskPublisher.test.js  test_deployment.py  test_encrypted_connection.py  test_guardrails.py  test_queue_durability.py  test_retention_policy.py  test_router_service.py
(+42 files in other folders)
